# modorganizer-game_bethesda

./: .git-blame-ignore-revs  .gitattributes  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml  linting.yml
game_enderal/: CMakeLists.txt
game_enderal/src/: CMakeLists.txt  gameenderal.cpp  gameenderal.h
game_fallout3/: CMakeLists.txt
game_fallout3/src/: CMakeLists.txt  fallout3bsainvalidation.cpp  fallout3bsainvalidation.h  fallout3moddatacontent.h  game_fallout3_en.ts  gamefallout3.cpp  gamefallout3.h
game_fallout4/: CMakeLists.txt
game_fallout4/src/: CMakeLists.txt  fallout4moddatacontent.h  game_fallout4_en.ts  gamefallout4.cpp  gamefallout4.h
game_fallout4vr/: CMakeLists.txt
game_fallout4vr/src/: CMakeLists.txt  fallout4vrmoddatacontent.h  gamefallout4vr.cpp  gamefallout4vr.h
game_falloutnv/: CMakeLists.txt
game_falloutnv/src/: CMakeLists.txt  game_falloutNV_en.ts  gamefalloutnv.cpp  gamefalloutnv.h
game_gamebryo/: CMakeLists.txt
game_morrowind/: CMakeLists.txt
game_morrowind/src/: CMakeLists.txt  game_morrowind_en.ts  gamemorrowind.cpp  gamemorrowind.h  morrowindbsainvalidation.cpp  morrowindbsainvalidation.h  morrowindlocalsavegames.h  morrowindmoddatacontent.h
game_oblivion/: CMakeLists.txt
game_oblivion/src/: CMakeLists.txt  game_oblivion_en.ts  gameoblivion.cpp  oblivionbsainvalidation.cpp  oblivionbsainvalidation.h  oblivionmoddatachecker.cpp  oblivionmoddatacontent.h
game_skyrim/: CMakeLists.txt
game_skyrimse/: CMakeLists.txt
game_skyrimvr/: CMakeLists.txt
game_starfield/: CMakeLists.txt
game_ttw/: CMakeLists.txt
(+52 files in other folders)
